--- a/css/style.css
+++ b/css/style.css
@@ -203,3 +203,5 @@ footer {width:100%;padding:40px 0 33px;background:url(../images/footer-tail.gif)
 
 .by-field {text-align:center;font-size:10px; padding-top: 20px;}
 .c-field {text-align: right;font-size: 10px;padding-top: 20px;}
+.social { padding: 15px;
+}
